イベント発火の実験

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             components: components
           }
         })
+        ga('send', 'event', 'pv', 'fingerprint', result);
       })
+
     }
   </script>
 
